update makefile, work on slides

--- a/index.html
+++ b/index.html
@@ -46,7 +46,28 @@
 <h1>00 00 00 00</h1>
 <ul>
 <li>“Due to recent revelations…” / NSA / Global Surveillance / etc</li>
-<li>Wanted to talk about your traffic, on the wire</li>
+<li>Will be talking tonight about:
+<ul>
+<li>Your traffic, on the wire</li>
+<li>Authentication AND encryption</li>
+</ul></li>
+</ul>
+</section>
+<section id="section-1" class="slide level1">
+<h1>00 00 00 01</h1>
+<ul>
+<li>Expectations of blanket respect of privacy are no longer reasonable in 2014</li>
+<li>Many previously “theoretical” privileged access attacks now widespread
+<ul>
+<li>MITM attacks very real</li>
+<li></li>
+</ul></li>
+</ul>
+</section>
+<section id="section-2" class="slide level1">
+<h1>00 00 00 10</h1>
+<ul>
+<li></li>
 </ul>
 </section>
 <section id="questions-end" class="slide level1">
