generate latest slides via Makefile

--- a/index.html
+++ b/index.html
@@ -68,6 +68,53 @@
 <section id="section-2" class="slide level1">
 <h1>00 00 00 10</h1>
 <ul>
+<li>Metadata
+<ul>
+<li>More sources closer to users gives better information</li>
+<li>Traditionally 5-tupple
+<ul>
+<li>ip_proto, src_ip, src_port, dst_ip, dst_port</li>
+<li>along with timestamp</li>
+<li>can be combined with DNS/Geo/BGP information</li>
+<li>Provides information for troubleshooting and network planning</li>
+</ul></li>
+<li>Detail Time Limited</li>
+<li>Usage Graphs</li>
+</ul></li>
+</ul>
+</section>
+<section id="section-3" class="slide level1">
+<h1>00 00 00 11</h1>
+<ul>
+<li>So What Can Your ISP See?</li>
+<li>Last CryptoParty Traffic - All SSL Ports, that was all</li>
+<li>Is this a concern?</li>
+</ul>
+</section>
+<section id="section-4" class="slide level1">
+<h1>00 00 01 00</h1>
+<ul>
+<li>Routing Attacks
+<ul>
+<li>Accidental</li>
+<li>On Purpose</li>
+</ul></li>
+<li>Implications of routing diversions
+<ul>
+<li>Plaintext can be considered compromised</li>
+</ul></li>
+<li>LinkedIn ‘Intro’ Email Proxying (2013-10-23 - 2014-03-07)</li>
+</ul>
+</section>
+<section id="section-5" class="slide level1">
+<h1>00 00 01 01</h1>
+<ul>
+<li></li>
+</ul>
+</section>
+<section id="section-6" class="slide level1">
+<h1>00 00 01 11</h1>
+<ul>
 <li></li>
 </ul>
 </section>
@@ -78,7 +125,7 @@
 </ul>
 <div class="fragment">
 <ul>
-<li>Presentation source/download available at <a href="https://github.com/tbaschak/moles-whos-listening">github</a></li>
+<li>Presentation source/download available at <a href="https://github.com/tbaschak/cryptoparty-metadata">github.com/tbaschak/cryptoparty-metadata</a></li>
 </ul>
 </div>
 </section>
