generate latest slides via Makefile

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <section id="section-1" class="slide level1">
 <h1>00 00 00 01</h1>
 <ul>
-<li>Expectations of privacy are no longer reasonable in 2014
+<li>Expectations of data privacy are no longer absolute
 <ul>
 <li>DO NOT TRUST PLAINTEXT, be wary of weak crypto</li>
 </ul></li>
