generate latest slides via Makefile

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <ul>
 <li>Metadata</li>
 <li>Your traffic, on the wire</li>
-<li>Authentication AND Encryption</li>
+<li>Encrypting your data in transit</li>
 </ul></li>
 </ul>
 </section>
@@ -112,7 +112,11 @@
 <section id="section-5" class="slide level1">
 <h1>00 00 01 01</h1>
 <ul>
-<li></li>
+<li>Encryption
+<ul>
+<li>Always if you want your data to be private</li>
+<li>When configuring SSL, check the ciphers, there are valid options which are silly</li>
+</ul></li>
 </ul>
 </section>
 <section id="section-6" class="slide level1">
